test/should-fail/rb-annotation-3.j
type unit extends handle
//# +rbutts
function foo takes handle h returns unit
	return h
	return null
endfunction